--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<title>LIB2024 - QA</title>
 </head>
 <body>
-
-	</body>
-	</html>
+	<h1>LIB2024- QA</h1>
+	<!-- Qus/Ans list begins -->
+	<ol>
+		<!-- Qus 1 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				What are the three componets of Web?
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				Ans for Qus 1
+		</p></li>
+		<!-- Qus 2 -->
+		<li>
+			<p>
+				<strong>Qus:</strong>
+				Define version control and give one example.
+			</p>
+			<p>
+				<strong>Ans:</strong>
+				Ans for Qus 2
+			</p>
+		</li>
+  </ol>
+</body>
+</html>
