--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -12,11 +12,11 @@
 		<li>
 			<p>
 				<strong>Qus: </strong>
-				What are the three componets of Web?
+				What are the three components of Web?
 			</p>
 			<p>
 				<strong>Ans: </strong>
-				Ans for Qus 1
+				The three components of Web are comprised of HTML (Hyper Text Markup Language), CSS (Cascading Style Sheets), and JavaScript.
 		</p></li>
 		<!-- Qus 2 -->
 		<li>
@@ -26,7 +26,7 @@
 			</p>
 			<p>
 				<strong>Ans:</strong>
-				Ans for Qus 2
+				Version control is the ability to track and manage changes done to software code. Version control systems such as GitHub are software tools that assist users and their teams to manage changes to source code over time. 
 			</p>
 		</li>
   </ol>
