--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -29,6 +29,26 @@
 				Version control is the ability to track and manage changes done to software code. Version control systems such as GitHub are software tools that assist users and their teams to manage changes to source code over time. 
 			</p>
 		</li>
+		<!-- Qus 3 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				What tag is used to create the title of a web page? Give an example.
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				Answer later
+		</p></li>
+		<!-- Qus 4 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				 What tag is used to create a paragraph in html? Give an example
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				Answer later
+		</p></li>
   </ol>
 </body>
 </html>
