--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -37,7 +37,8 @@
 			</p>
 			<p>
 				<strong>Ans: </strong>
-				Answer later
+				The &lt;title&gt; tag is used to create the title of a webpage.
+				This is an example. <a href="https://algonquincollege.com" title="Algonquin College">Algonquin College</a> 
 		</p></li>
 		<!-- Qus 4 -->
 		<li>
@@ -47,7 +48,8 @@
 			</p>
 			<p>
 				<strong>Ans: </strong>
-				Answer later
+				The &lt;p&gt; tag is used to create a paragraph in html. 
+				<p> This is an example of &lt;p&gt; being used to create a paragraph. 
 		</p></li>
   </ol>
 </body>
