--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>index</title>
 	<header>
-		<h1>Assignment 1</h1>
+		<h1>Assignment 1</h1></header>
 			<h2>This the the main Section</h2>
 			<div>I am a div</div>
 			<p>I am a paragraph</p>
@@ -18,10 +18,10 @@
 				<nav>
 					<a href="https://google.com" title="Google">Google Link</a>
 					<a href="https://amazon.ca" title="Amazon">Amazon Link</a>
-				</nav></p>
+				</nav>
 		<div>
 			<h5>Some Lists in a Div</h5>
-			<nav><p>
+			<nav>
 				<ul>
 					<li>Unordered List Element 1</li>
 						<li>Unordered List Element 2</li>
@@ -31,8 +31,8 @@
 									<li>Ordered list Element 2</li>
 									<li>Ordered list Element 3</li>
 								</ol>
-							</p>
-		</div>
+		</nav>
+	</div>
 	<footer>
 		<p>This is a footer</p>
 	</footer>
