--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -11,8 +11,8 @@
 			Break</p>
 			<section>
 				<h3>This is a section</h3>
-				This is an important part of the section<br>
-				This is a less important part of the section
+				This is important part of an section<br>
+				This is less important part of the section
 			</section>
 			<p><b>Some links in a Div</b><p>
 				<nav>
