--- a/lib2024/assg-1/index.html
+++ b/lib2024/assg-1/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- put the title below the head -->
 	<title>index</title>
+	<!-- place the header below the title -->
 	<header>
 		<h1>Assignment 1</h1></header>
+		<!-- this is where the main body of the side will begin -->
 			<h2>This the the main Section</h2>
 			<div>I am a div</div>
 			<p>I am a paragraph</p>
@@ -14,6 +17,7 @@
 				This is important part of an section<br>
 				This is less important part of the section
 			</section>
+			<!-- beginning of a new paragraph -->
 			<p><b>Some links in a Div</b><p>
 				<nav>
 					<a href="https://google.com" title="Google">Google Link</a>
@@ -23,10 +27,12 @@
 			<h5>Some Lists in a Div</h5>
 			<nav>
 				<ul>
+					<!-- this list contains bullet points -->
 					<li>Unordered List Element 1</li>
 						<li>Unordered List Element 2</li>
 							<li>Unordered List Element 3</li></ul>
 							<ol>
+								<!-- this list contains numbers -->
 									<li>Ordered list Element 1</li>
 									<li>Ordered list Element 2</li>
 									<li>Ordered list Element 3</li>
