--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -51,6 +51,16 @@
 				The &lt;p&gt; tag is used to create a paragraph in html. 
 				<p> This is an example of &lt;p&gt; being used to create a paragraph. 
 		</p></li>
+		<!-- Qus 5 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				 Identify the odd one from these tags: <span>, <p>, <a>, <i>  and state the reason?
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				The &lt;span&gt; tag is the odd one out because the other tags are used to define elements.
+		</p></li>
   </ol>
 </body>
 </html>
