--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -55,12 +55,66 @@
 		<li>
 			<p>
 				<strong>Qus: </strong>
-				 Identify the odd one from these tags: <span>, <p>, <a>, <i>  and state the reason?
+				 Identify the odd one from these tags: &lt;span&gt;, &lt;p&gt;, &lt;a&gt;, &lt;i&gt;  and state the reason?
 			</p>
 			<p>
 				<strong>Ans: </strong>
 				The &lt;span&gt; tag is the odd one out because the other tags are used to define elements.
 		</p></li>
+		<!-- Qus 6 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				What are the tags required to create a navigation list in HTML? 
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				The tags required to create a navigation list in HTML are &lt;nav&gt;, &lt;ul&gt; and &lt;li&gt;.
+			</p></li>
+			<!--Qus 7 -->
+			<li>
+				<p>
+					<strong>Qus: </strong>
+					What element is used to create images? Name its attributes.  
+				</p>
+				<p>
+				<strong>Ans: </strong>
+				The &lt;img&gt; element is used to create images. Its attributes are alt, cross origin, height, ismap, loading, longdesc, referrerpolicy, sizes, src, srcset, usemap, and width. 
+				</p></li>
+			<!-- Qus 8 -->
+			<li>
+				<p>
+					<strong>Qus: </strong>
+					 Identify the odd one from these tags: &lt;table&gt;, &lt;tr&gt;, &lt;b&gt;, &lt;td&gt;  and state the reason.
+					</p>
+					<p>
+					<strong>Ans: </strong>
+					The &lt;b&gt; tag is the ode one out. The other tags are relevant to creating a table.
+				</p></li>
+				<!-- Qus 9 -->
+				<li>
+					<p>
+						<strong>Qus: </strong>
+						Give an example of color picker input. 
+					</p>
+					<p>
+						<strong>Ans: </strong>
+						An example would be &lt;input type="color"&gt;. This would give you the default value of #00000 or black, unless you add a value. An example would be <input type="color" value="#ff99ff">
+					</p></li>
+					<!--Qus 10 -->
+					<li>
+						<p>
+							<strong>Qus: </strong>
+							What is the use of name and value attributes? Give two examples 
+						</p>
+						<p>
+							<strong>Ans: </strong>
+							The use of the of the name attribute specifies a name for an HTML element.
+							This is an example of the name attribute
+							<button name="subject" type="submit" value="HTML">HTML</button>
+							The value attribute can be used to specify the value of the element. 
+							This is an example <input value = "100">
+
   </ol>
 </body>
 </html>
