--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -5,5 +5,6 @@
 	<!-- this is the title of the assignment -->
 </head>
 <body>
+	<!-- this is the header -->
 	<header id="header">
 		<h1>Assignment 2</h1>
