--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- this is a declaration of language -->
 <head>
 	<title>Assignment 2</title>
 	<!-- this is the title of the assignment -->
@@ -9,3 +10,8 @@
 	<header id="header">
 		<h1>Assignment 2</h1>
 	</header>
+	<div>
+		<header id="subheading">
+			<h3>Employee List</h3>
+		</header>
+	</div>
