--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -10,5 +10,7 @@
 	<header id="header">
 		<h1>Assignment 2</h1>
 	</header>
+	<!-- this is the beginning of a table -->
 	<section id="table-section" class="main-section">
 		 			<h2>Employee List</h2>
+		 			<table id=employee list>
