--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -13,4 +13,6 @@
 	<!-- this is the beginning of a table -->
 	<section id="table-section" class="main-section">
 		 			<h2>Employee List</h2>
-		 			<table id=employee list>
+		 			<table style=100%>
+		 				<tr>
+		 					<th>"Id>"</th>
