--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -15,4 +15,6 @@
 		 			<h2>Employee List</h2>
 		 			<table style=100%>
 		 				<tr>
-		 					<th>"Id>"</th>
+		 					<th>Id</th>
+		 					<th>Name</th>
+		 					<th>email</th>
