--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -14,6 +14,11 @@
 	<section id="table-section" class="main-section">
 		 			<h2>Employee List</h2>
 		 			<table style=100%>
+		 				<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
 		 				<tr>
 		 					<th>Id</th>
 		 					<th>Name</th>
