--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -23,3 +23,9 @@ table, th, td {
 		 					<th>Id</th>
 		 					<th>Name</th>
 		 					<th>email</th>
+		 					</tr>
+		 					<tr>
+		 						<td>1</td>
+		 						<td>John</td>
+		 						<td>john@fakemail.com</td>
+		 					</tr>
