--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -29,3 +29,13 @@ table, th, td {
 		 						<td>John</td>
 		 						<td>john@fakemail.com</td>
 		 					</tr>
+		 					<tr>
+		 						<td>2</td>
+		 						<td>sam</td>
+		 						<td>sam@fakemail.com</td>
+		 					</tr>
+		 					<tr>
+		 						<td>1</td>
+		 						<td>Bob</td>
+		 						<td>bob@fakemail.com</td>
+		 					</tr>
