--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -13,7 +13,7 @@
 	<!-- this is the beginning of a table -->
 	<section id="table-section" class="main-section">
 		 			<h2>Employee List</h2>
-		 			<table style=100%>
+		 			<table border="1">
 		 				<style>
 table, th, td {
   border: 1px solid black;
