--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -14,24 +14,34 @@
 	<section id="table-section" class="main-section">
 		 			<h2>Employee List</h2>
 		 			<table border="1">
-		 				<style>
+  <tr>
+  		<th>Id</th>
+		 <th>Name</th>
+		 	<th>email</th>
+		 		<tr style="text-align: center;">
+		 			<td>1</td>
+		 			<td>John</td>
+		 			<td>john@fakemail.com</td>
+		 			</tr>
 		 				<tr>
-		 					<th>Id</th>
-		 					<th>Name</th>
-		 					<th>email</th>
-		 					</tr>
-		 					<tr>
-		 						<td>1</td>
-		 						<td>John</td>
-		 						<td>john@fakemail.com</td>
-		 					</tr>
-		 					<tr>
-		 						<td>2</td>
-		 						<td>sam</td>
-		 						<td>sam@fakemail.com</td>
-		 					</tr>
+		 				<td>2</td>
+		 				<td>sam</td>
+		 				<td>sam@fakemail.com</td>
+		 				</tr>
 		 					<tr>
 		 						<td>1</td>
 		 						<td>Bob</td>
 		 						<td>bob@fakemail.com</td>
 		 					</tr>
+		 					<tr>
+		 						<td>1</td>
+		 						<td>Jack</td>
+		 						<td>jack@fakemail.com</td>
+		 					</tr>
+		 					<tr>
+		 						<td>1</td>
+		 						<td>rob</td>
+		 						<td>Rob@fakemail.com</td>
+		 					</tr>
+		 					<tr>
+		 						<td colspan="3">All of the above are Division Heads</td>
