--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -23,25 +23,31 @@
 		 			<td>John</td>
 		 			<td>john@fakemail.com</td>
 		 			</tr>
-		 				<tr>
+		 				<tr style="text-align: center;">
 		 				<td>2</td>
 		 				<td>sam</td>
 		 				<td>sam@fakemail.com</td>
 		 				</tr>
-		 					<tr>
+		 					<tr style="text-align: center;">
 		 						<td>1</td>
 		 						<td>Bob</td>
 		 						<td>bob@fakemail.com</td>
 		 					</tr>
-		 					<tr>
+		 					<tr style="text-align: center;">
 		 						<td>1</td>
 		 						<td>Jack</td>
 		 						<td>jack@fakemail.com</td>
 		 					</tr>
-		 					<tr>
+		 					<tr style="text-align: center;">
 		 						<td>1</td>
 		 						<td>rob</td>
 		 						<td>Rob@fakemail.com</td>
 		 					</tr>
 		 					<tr>
 		 						<td colspan="3">All of the above are Division Heads</td>
+		 					</tr>
+		 				</tr>
+		 			</table>
+		 		</section>
+		 		<section id="images" class="main-section">
+		 			<h2>Animals</h2>
