--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -18,35 +18,34 @@
   		<th>Id</th>
 		 <th>Name</th>
 		 	<th>email</th>
-		 		<tr style="text-align: center;">
-		 			<td>1</td>
-		 			<td>John</td>
-		 			<td>john@fakemail.com</td>
+		 </tr>
+		 		<tr>
+		 			<td><center>1</center></td>
+		 			<td><center>John</center></td>
+		 			<td><center>john@fakemail.com</center></td>
 		 			</tr>
-		 				<tr style="text-align: center;">
-		 				<td>2</td>
-		 				<td>sam</td>
-		 				<td>sam@fakemail.com</td>
+		 				<td><center>2</center></td>
+		 				<td><center>sam</center></td>
+		 				<td><center>sam@fakemail.com</center></td>
 		 				</tr>
-		 					<tr style="text-align: center;">
-		 						<td>1</td>
-		 						<td>Bob</td>
-		 						<td>bob@fakemail.com</td>
+		 					<tr>
+		 						<td><center>1</center></td>
+		 						<td><center>Bob</center></td>
+		 						<td><center>bob@fakemail.com</center></td>
 		 					</tr>
-		 					<tr style="text-align: center;">
-		 						<td>1</td>
-		 						<td>Jack</td>
-		 						<td>jack@fakemail.com</td>
+		 					<tr>
+		 						<td><center>1</center></td>
+		 						<td><center>Jack</center></td>
+		 						<td><center>jack@fakemail.com</center></td>
 		 					</tr>
-		 					<tr style="text-align: center;">
-		 						<td>1</td>
-		 						<td>rob</td>
-		 						<td>Rob@fakemail.com</td>
+		 					<tr>
+		 						<td><center>1</center></td>
+		 						<td><center>rob</center></td>
+		 						<td><center>Rob@fakemail.com</center></td>
 		 					</tr>
 		 					<tr>
 		 						<td colspan="3">All of the above are Division Heads</td>
 		 					</tr>
-		 				</tr>
 		 			</table>
 		 		</section>
 		 		<section id="images" class="main-section">
