--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -19,12 +19,10 @@
 		 <th>Name</th>
 		 	<th>email</th>
 		 </tr>
-		 		<tr>
-		 			<td><center>1</center></td>
+		 		<tr><td><center>1</center></td>
 		 			<td><center>John</center></td>
 		 			<td><center>john@fakemail.com</center></td>
-		 			</tr>
-		 				<td><center>2</center></td>
+		 			</tr><td><center>2</center></td>
 		 				<td><center>sam</center></td>
 		 				<td><center>sam@fakemail.com</center></td>
 		 				</tr>
@@ -49,4 +47,34 @@
 		 			</table>
 		 		</section>
 		 		<section id="images" class="main-section">
-		 			<h2>Animals</h2>
+		 				<h2>Animals</h2>
+		 				<figure>
+					<img src="img/elephant.jpg" alt="Image 1 in figure" width="300" height="200">
+					<figcaption>This is an Elephant.</figcaption>
+				</figure>
+				<figure>
+					<img src="img/lion.jpg" alt="Image 2 in figure" width="300" height="200">
+					<figcaption>This is a Lion.</figcaption>
+				</figure>
+				<figure>
+					<img src="img/snake.jpg" alt="Image 3 in figure" width="300" height="200">
+					<figcaption>This is a Snake.</figcaption>
+				</figure>
+				<figure>
+					<img src="img/whale.jpg" alt="Image 4 in figure" width="300" height="200">
+					<figcaption>This is a Whale.</figcaption>
+				</figure>
+				<figure>
+					<img src="img/hawk.jpg" alt="Image 5 in figure" width="300" height="200">
+					<figcaption>This is a Hawk.</figcaption>
+				</figure>
+		</section>
+		<section>
+            	<h2>HTML Entities</h2>
+            	<p>Non Breaking Space : &#160;</p>
+            		<p>ampersand : &#38;</p>
+            		<p>Pound : &#163;</p>
+            		<p>Copyright : &#169;</p>
+            	</article>
+            </section>
+
