--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -15,6 +15,7 @@
 		 			<h2>Employee List</h2>
 		 			<table border="1">
 		 				<thead>
+		 					<!-- tr defines a row in a table, th defines a table header -->
   <tr>
   		<th>Id</th>
 		 <th>Name</th>
@@ -75,6 +76,7 @@
 				</figure>
 		</section>
 		<section>
+			<!-- These are HTML entities -->
             	<h2>HTML Entities</h2>
             	<p>Non Breaking Space : &#160;</p>
             		<p>ampersand : &#38;</p>
@@ -107,4 +109,8 @@
 				<h2>Hidden Comment:</h2>
 					<!-- This comment is hidden -->
 			</section>
+			<!-- Made 15 February 2021 by Krystal Sobhie --> 
+		</body>
+	</html>
+
 
