--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -62,17 +62,26 @@
 		 			<figure>		<!-- the img tag is used to create an image in a document -->
 						<img src="img/elephant.jpg" alt="Image 1 in figure" width="300" height="200">
 						<figcaption>This is an Elephant.</figcaption>
+					</figure>
+					<figure>
 						<img src="img/lion.jpg" alt="Image 2 in figure" width="300" height="200">
 						<figcaption>This is a Lion.</figcaption>
+					</figure>
+					<figure>
 						<img src="img/snake.jpg" alt="Image 3 in figure" width="300" height="200">
 						<figcaption>This is a Snake.</figcaption>
+					</figure>
+					<figure>
 						<img src="img/whale.jpg" alt="Image 4 in figure" width="300" height="200">
 						<figcaption>This is a Whale.</figcaption>
+					</figure>
+					<figure>
 						<img src="img/hawk.jpg" alt="Image 5 in figure" width="300" height="200">
 						<figcaption>This is a Hawk.</figcaption>
 					</figure>
 				</article>
 			</section>
+		
 		<section>
 			<!-- These are HTML entities -->
             <h2>HTML Entities</h2>
@@ -107,10 +116,10 @@
 			</article>
 		</section>
 			
-		<section>
-			<h2>Hidden Comment:</h2>
+	<section>
+		<h2>Hidden Comment:</h2>
 					<!-- This comment is hidden -->
-		</section>
+	</section>
 			<!-- Made 15 February 2021 by Krystal Sobhie --> 
 </body>
 </html>
