--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -15,14 +15,14 @@
 		 	<h2>Employee List</h2>
 		 	<table border="1">
 		 		<thead>
-		 					<!-- tr defines a row in a table, th defines a table header -->
+		 			<!-- tr defines a row in a table, th defines a table header -->
  					 <tr>
   						<th>Id</th>
 		 				<th>Name</th>
 		 				<th>email</th>
 		 			</tr>
 				</thead>
-		 <!--I used html formatting to center my text in the table instead of css-->
+		 		<!--I used html formatting to center my text in the table instead of css-->
 		 		<tbody>
 		 			<tr>
 		 				<td><center>1</center></td>
@@ -55,7 +55,7 @@
 		 		</tbody>
 		 	</table>
 		 </section>
-		 		
+		 <!-- This section will include images -->		
 		 <section id="images" class="main-section">
 		 	<h2>Animals</h2>
 		 	<article>
@@ -81,9 +81,8 @@
 				</figure>
 			</article>
 		</section>
-		
+		<!-- These are HTML entities -->
 		<section>
-			<!-- These are HTML entities -->
             <h2>HTML Entities</h2>
            	<article>
             	<p>Non Breaking Space : &#160;</p>
@@ -92,12 +91,11 @@
             	<p>Copyright : &#169;</p>
             </article>
         </section>
-		
+		<!-- These are special tags -->
 		<section id="special-tags" class="main-section">
 			<h2>Special Tags :</h2>
 				<article id="st-dl" class="special-tag">
             		<dl> 
-            			<!-- dt is for the Term  -->
             			<dt>Coffee</dt>
             			<dd>- black hot drink</dd>
             			<dt>Milk</dt>
