--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -117,7 +117,7 @@
 			
 		<section>
 		<h2>Hidden Comment:</h2>
-					<!-- This comment is hidden -->
+					<!-- Hello Professor Winner!!! -->
 		</section>
 			<!-- Made 15 February 2021 by Krystal Sobhie --> 
 </body>
