--- a/lib2024/assg-2/index.html
+++ b/lib2024/assg-2/index.html
@@ -17,7 +17,9 @@
 		 		<thead>
 		 			<!-- tr defines a row in a table, th defines a table header -->
  					 <tr>
+ 					 <!-- row -->
   						<th>Id</th>
+  						<!-- col -->
 		 				<th>Name</th>
 		 				<th>email</th>
 		 			</tr>
@@ -55,7 +57,7 @@
 		 		</tbody>
 		 	</table>
 		 </section>
-		 <!-- This section will include images -->		
+		 <!-- This section will include images of animals -->		
 		 <section id="images" class="main-section">
 		 	<h2>Animals</h2>
 		 	<article>
@@ -81,7 +83,7 @@
 				</figure>
 			</article>
 		</section>
-		<!-- These are HTML entities -->
+		<!-- This is a new section -->
 		<section>
             <h2>HTML Entities</h2>
            	<article>
