--- a/lib2024/qa/index.html
+++ b/lib2024/qa/index.html
@@ -17,7 +17,8 @@
 			<p>
 				<strong>Ans: </strong>
 				The three components of Web are comprised of HTML (Hyper Text Markup Language), CSS (Cascading Style Sheets), and JavaScript.
-		</p></li>
+			</p>
+		</li>
 		<!-- Qus 2 -->
 		<li>
 			<p>
@@ -39,7 +40,8 @@
 				<strong>Ans: </strong>
 				The &lt;title&gt; tag is used to create the title of a webpage.
 				This is an example. <a href="https://algonquincollege.com" title="Algonquin College">Algonquin College</a> 
-		</p></li>
+			</p>
+		</li>
 		<!-- Qus 4 -->
 		<li>
 			<p>
@@ -49,8 +51,9 @@
 			<p>
 				<strong>Ans: </strong>
 				The &lt;p&gt; tag is used to create a paragraph in html. 
-				<p> This is an example of &lt;p&gt; being used to create a paragraph. 
-		</p></li>
+			<p> This is an example of &lt;p&gt; being used to create a paragraph. 
+			</p>
+		</li>
 		<!-- Qus 5 -->
 		<li>
 			<p>
@@ -60,7 +63,8 @@
 			<p>
 				<strong>Ans: </strong>
 				The &lt;span&gt; tag is the odd one out because the other tags are used to define elements.
-		</p></li>
+			</p>
+		</li>
 		<!-- Qus 6 -->
 		<li>
 			<p>
@@ -70,51 +74,81 @@
 			<p>
 				<strong>Ans: </strong>
 				The tags required to create a navigation list in HTML are &lt;nav&gt;, &lt;ul&gt; and &lt;li&gt;.
-			</p></li>
+			</p>
+		</li>
 			<!--Qus 7 -->
-			<li>
-				<p>
-					<strong>Qus: </strong>
-					What element is used to create images? Name its attributes.  
-				</p>
-				<p>
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				What element is used to create images? Name its attributes.  
+			</p>
+			<p>
 				<strong>Ans: </strong>
 				The &lt;img&gt; element is used to create images. Its attributes are alt, cross origin, height, ismap, loading, longdesc, referrerpolicy, sizes, src, srcset, usemap, and width. 
-				</p></li>
+			</p>
+		</li>
 			<!-- Qus 8 -->
-			<li>
-				<p>
-					<strong>Qus: </strong>
-					 Identify the odd one from these tags: &lt;table&gt;, &lt;tr&gt;, &lt;b&gt;, &lt;td&gt;  and state the reason.
-					</p>
-					<p>
-					<strong>Ans: </strong>
-					The &lt;b&gt; tag is the ode one out. The other tags are relevant to creating a table.
-				</p></li>
-				<!-- Qus 9 -->
-				<li>
-					<p>
-						<strong>Qus: </strong>
-						Give an example of color picker input. 
-					</p>
-					<p>
-						<strong>Ans: </strong>
-						An example would be &lt;input type="color"&gt;. This would give you the default value of #00000 or black, unless you add a value. An example would be <input type="color" value="#ff99ff">
-					</p></li>
-					<!--Qus 10 -->
-					<li>
-						<p>
-							<strong>Qus: </strong>
-							What is the use of name and value attributes? Give two examples 
-						</p>
-						<p>
-							<strong>Ans: </strong>
-							The use of the of the name attribute specifies a name for an HTML element.
-							This is an example of the name attribute
-							<button name="subject" type="submit" value="HTML">HTML</button>
-							The value attribute can be used to specify the value of the element. 
-							This is an example <input value = "100">
-						</p></li>
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				 Identify the odd one from these tags: &lt;table&gt;, &lt;tr&gt;, &lt;b&gt;, &lt;td&gt;  and state the reason.
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				The &lt;b&gt; tag is the ode one out. The other tags are relevant to creating a table.
+			</p>
+		</li>
+			<!-- Qus 9 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				Give an example of color picker input. 
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				An example would be &lt;input type="color"&gt;. This would give you the default value of #00000 or black, unless you add a value. An example would be <input type="color" value="#ff99ff">
+			</p>
+		</li>
+			<!--Qus 10 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				What is the use of name and value attributes? Give two examples 
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				The use of the of the name attribute specifies a name for an HTML element.
+				This is an example of the name attribute
+				<button name="subject" type="submit" value="HTML">HTML</button>
+				The value attribute can be used to specify the value of the element. 
+				This is an example <input value = "100">
+			</p>
+		</li>
+			<!--Qus 11 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				Give an example of inline style
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				<p style="color:magenta;">This is an example of inline style.</p>
+			</p>
+		</li>
+			<!--Qus 12 -->
+		<li>
+			<p>
+				<strong>Qus: </strong>
+				How would you link an external style sheet? Give example.
+			</p>
+			<p>
+				<strong>Ans: </strong>
+				You like an external style sheet by using &lt; link &gt; to link an external CSS file. You can add a link to the &lt; head &gt; section.
+			<div>Here is an example : &lt; link rel="stylesheet" href="styles.css" &gt;</div>
+			</p>
+		</li>
+
+
 
   </ol>
 </body>
