--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -33,6 +33,9 @@
 					<label for="birthday">Date of Birth:</label>
  					<input type="date" id="birthday" name="birthday">
  				</div>
+ 				<button type="submit">Submit</button>
+ 				<button type="reset">Reset</button>
+ 			</form>
 
 
 
