--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -4,10 +4,11 @@
 	<title>Assignment 3</title>
 </head>
 <body>
-	<h1> Assignment 3 - Html Forms </h1>
+	<h1> Assignment 3</h1>
 
-	<div id="wrapper" class="wrapper"></div>
-		<section id="html-forms" class="main-section"></section>
+	<div id="wrapper" class="wrapper">
+		<section id="html-forms" class="main-section">
+		<h2>Html-Forms</h2>
 			<form action="somepage.php" method="get">
 				<div id="fn-container" class="form-elm">
 					<label for="FirstName">First Name</label>
@@ -36,6 +37,9 @@
  				<button type="submit">Submit</button>
  				<button type="reset">Reset</button>
  			</form>
+ 		</section>
+ 	</div>
+ 			
 
 
 
