--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -41,6 +41,12 @@
  						<label for="phone">Phone:</label>
  						<input type="tel" name="phone" id="phone" placeholder="XXX-XXX-XXXX" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
  					</div>
+ 					<div>
+ 						<label for="male" class="form-elm"></label>
+ 						<input type="radio" name="gender" id="male" value="male"> Male<br>
+ 						<label for="female" class="form-elm"></label>
+ 						<input type="radio" name="gender" id="female" value="female"> Female<br>
+ 					</div>
  					<!-- users can submit or reset their form -->
  					<button type="submit">Submit</button>
  					<button type="reset">Reset</button>
