--- a/lib2024/assg-3/index.html
+++ b/lib2024/assg-3/index.html
@@ -41,6 +41,7 @@
  						<label for="phone">Phone:</label>
  						<input type="tel" name="phone" id="phone" placeholder="XXX-XXX-XXXX" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
  					</div>
+ 					<!-- radio buttons so the user can select a gender -->
  					<div>
  						<label for="male" class="form-elm"></label>
  						<input type="radio" name="gender" id="male" value="male"> Male<br>
