--- a/lib2024/assg-4/Simple Style Schema.html
+++ b/lib2024/assg-4/Simple Style Schema.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 </head>
-<body style="font-family: verdana, sans-serif;font-size: 12px;">
+<body style="font-family: open-sans, sans-serif;font-size: 12px;">
 <header>
 <h1>Title of Page</h1>
 </header><main>
@@ -30,7 +30,7 @@
 <tr>
 <td>Header</td>
 <td>100%</td>
-<td>1px</td>
+<td>230px</td>
 <td>Page</td>
 </tr>
 <tr>
@@ -42,26 +42,32 @@
 <tr>
 <td>Article</td>
 <td>60%</td>
-<td>1px</td>
+<td>210px</td>
 <td>Main</td>
 </tr>
 <tr>
 <td>Aside</td>
 <td>90%</td>
-<td>1px</td>
+<td>360px</td>
 <td>Main</td>
 </tr>
 <tr>
 <td>Footer</td>
 <td>100%</td>
-<td>1px</td>
+<td>112px</td>
 <td>Page</td>
 </tr>
 <tr>
 <td>Image</td>
-<td>1px</td>
-<td>1px</td>
+<td>284px</td>
+<td>214px</td>
 <td>Aside</td>
+</tr>
+<tr>
+<td>Image</td>
+<td>185px</td>
+<td>135px</td>
+<td>Article</td>
 </tr>
 </tbody>
 </table>
@@ -128,7 +134,7 @@
 </thead>
 <tbody>
 <tr>
-<td>Source Sans Pro</td>
+<td>Open Sans</td>
 <td>Body Text</td>
 <td>16px</td>
 <td>normal</td>
@@ -146,15 +152,15 @@
 <h3>URLs:</h3>
 <nav>
 <ul>
-<li>Source Sans Pro:&nbsp;<a href="https://fonts.google.com/specimen/Source+Sans+Pro" title="Source-sans-pro" target="blank">https://fonts.google.com/specimen/Source+Sans+Pro</a></li>
-<li>Noto-Serif:&nbsp;<a href="https://fonts.googleapis.com/css?family=Noto+Serif" title="Noto-Serif" target="blank">https://fonts.googleapis.com/css?family=Noto+Serif</a></li>
+<li>Open-Sans:&nbsp;<a href="https://fonts.google.com/specimen/Open+Sans" title="Open+Sans" target="blank">https://fonts.google.com/specimen/Open+Sans</a></li>
+<li>Noto Sans JP:&nbsp;<a href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" title="Noto+Sans JP" target="blank">'https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap'</a></li>
 </ul>
 </nav></section>
 <section>
 <h3>Background Images:</h3>
 <ul>
-<li>URL:&nbsp;<a href="https://toptal.com/designers/subtlepatterns/white-waves-pattern/" title="white-waves-pattern" target="blank">https://www.toptal.com/designers/subtlepatterns/white-waves-pattern/</a></li>
-<li>Style: White Waves Pattern</li>
+<li>URL:&nbsp;<a href="https://www.toptal.com/designers/subtlepatterns/watercolor-pattern/" title="watercolor-pattern" target="blank">https://www.toptal.com/designers/subtlepatterns/watercolor-pattern/</a></li>
+<li>Style: Watercolor Pattern</li>
 </ul>
 </section>
 </main>
