--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -4,7 +4,7 @@
 	<title>Assignment 4</title>
 	<!-- put your css and font links here!-->
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css"/>
 </head>
 <body>
 	<header>
@@ -36,28 +36,28 @@
 			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin</p>
 		</section>
 
-		<article class="image-gallery">
+		<article class="image-gallery clearfix">
 			<h3>Secondary Content Title</h3>
 
 			<div class="image-gallery">
-   	 			<img src="img/sleepycat.jpg" alt="Sleepy Cat" width="250" height="200">
-  				<div class="desc">Image 1</div>
+   	 			<img src="img/sleepycat.jpg" alt="Sleepy Cat">
+  				<figcaption>Image 1</figcaption>
 			</div>
 
 			<div class="image-gallery">
-    			<img src="img/threecats.jpg" alt="Three Cats" width="250" height="200">
- 				<div class="desc">Image 2</div>
+    			<img src="img/threecats.jpg" alt="Three Cats">
+ 				<figcaption>Image 2</figcaption>
 			</div>
 
 			<div class="image-gallery">
-    			<img src="img/onecat.jpg" alt="One Cat" width="250" height="200">
-  				<div class="desc">Image 3</div>
+    			<img src="img/onecat.jpg" alt="One Cat">
+  				<figcaption>Image 3</figcaption>
 			</div>
 		</article>
 	</main>
 
 
-		<aside class="col-main site-sidebar">
+		<aside class="col-main site-sidebar clearfix">
 			<div class="site-sidebar">
 				<div id="sidebar-image" class="image">
 					<img src="img/whitecat.jpg" alt="Sidebar Image" width="285" height="215">
@@ -68,14 +68,22 @@
 		</aside>
 
 	<footer class="footer" id="footer">
-		<div class="footer-container">
+		<div class="footer-container clearfix">
 			<p>CopyRight 2017, All Rights Reserved.</p>
 		</div>
-		<div class="social-container">
+			<nav class="social-container" id="social-container">
+				<ul>
+					<li>
 			<a href="http://facebook.com"><img class=“sm_icon“ src="img/icons/facebook.png" alt="facebook"></a>
+		</li>
+		<li>
 			<a href="http://youtube.com"><img class=“sm_icon“ src="img/icons/youtube.png" alt="youtube"></a>
+		</li>
+		<li>
 			<a href="http://twitter.com"><img class=“sm_icon“ src="img/icons/twitter.png" alt="twitter"></a>
-		</div>
+		</li>
+				</ul>
+			</nav>
 	</footer>
 	<!-- Created by Krystal Sobhie 2021-03-19 -->
 </body>
