--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -35,26 +35,24 @@
 			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin</p><br>
 			<p>Souffle bonbon sweet roll. Tootsie roll chocolate gummies toffee topping jelly donut. Apple pie carrot cake apple pie lollipop chocolate lollipop. Gummi bears sweet roll pastry cookie donut danish pudding sweet roll brownie. Fruitcake sweet roll pie liquorice danish sesame snaps dessert jelly beans. Pie topping cupcake caramels. Gingerbread gummies sugar plum powder biscuit jelly-o pastry lemon drops cookie. Dessert macaroon jelly beans tart cake cotton candy bonbon donut. Wafer cupcake topping jelly jelly-o bonbon cake. Candy canes jelly-o danish brownie biscuit muffin caramels. Marshmallow powder chocolate liquorice tiramisu. Biscuit souffle sweet donut candy canes brownie tart muffin</p>
 		</section>
-
-		<article class="image-gallery clearfix">
-			<h3>Secondary Content Title</h3>
-
-			<div class="image-gallery">
-   	 			<img src="img/sleepycat.jpg" alt="Sleepy Cat">
-  				<figcaption>Image 1</figcaption>
-			</div>
-
-			<div class="image-gallery">
-    			<img src="img/threecats.jpg" alt="Three Cats">
- 				<figcaption>Image 2</figcaption>
-			</div>
-
-			<div class="image-gallery">
-    			<img src="img/onecat.jpg" alt="One Cat">
-  				<figcaption>Image 3</figcaption>
-			</div>
-		</article>
-	</main>
+		<article class="image-gallery">
+				<h3>Secondary Content Title</h3>
+				<div class="image-gallery clearfix">
+					<div class="images" id="image-1" >
+						<img src="img/sleepycat.jpg" alt="Gallery Image 1">
+						<span class="caption">Image 1</span>
+					</div>
+					<div class="images" id="image-2">
+						<img src="img/threecats.jpg" alt="Gallery Image 2">
+						<span class="caption">Image 2</span>
+					</div>
+					<div class="images" id="img-3">
+						<img src="img/onecat.jpg" alt="Gallery Image 3">
+						<span class="caption">Image 3</span>
+					</div>
+				</div>
+			</article>
+		</main>
 
 
 		<aside class="col-main site-sidebar clearfix">
