--- a/lib2024/assg-4/index.html
+++ b/lib2024/assg-4/index.html
@@ -46,7 +46,7 @@
 						<img src="img/threecats.jpg" alt="Gallery Image 2">
 						<span class="caption">Image 2</span>
 					</div>
-					<div class="images" id="img-3">
+					<div class="images" id="image-3">
 						<img src="img/onecat.jpg" alt="Gallery Image 3">
 						<span class="caption">Image 3</span>
 					</div>
